# capirs

./: .gitignore  Cargo.toml  README.md  build.rs
docu/: spec.md
examples/: consumer.rs  service.rs  service2.rs
examples/defs/: mod.rs  provider.rs
libvsomeipc/: CMakeLists.txt  vsomeipc.cpp  vsomeipc.h
src/: connection.rs  fmt.rs  lib.rs  message.rs  runtime.rs  service_adapter.rs  types.rs  vsomeip.rs  vsomeipc.rs
tests/: runtime_setup.rs
