# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "capirs"
version = "0.1.0"
edition = "2018"

[lib]
name = "capirs"
path = "src/lib.rs"

[[bin]]
name = "service"
path = "examples/service.rs"

[features]
#async-tokio = ["tokio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.59"
cmake = "0.1"

[dependencies]
tokio = {version="1", features=['full']}
libc = "0.2"

